--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   http: ^0.12.2
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
